Fix book cover images on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11143,6 +11143,29 @@ figcaption {
   letter-spacing: 0.005rem;
 }
 
+.coverimage {
+  max-width: 30%;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.coverimage-block {
+  max-width: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 576px) { 
+  .coverimage, .coverimage-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+  } 
+}
+
 .grlog blockquote { font-style:normal; border: 0px ; font-size:1em;}
 
 .grlog blockquote blockquote {   border-left: 2px solid #dddddd; }
